[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
http = "1.0.0"
prost = "0.12.3"
thiserror = "1.0.50"
tokio = "1.34.0"
tracing = "0.1.40"


[build-dependencies]
prost-build = "0.12.3"
